fix: bad css on globals.css witch cause distortion on radio button shadcn aspect-ratio

--- a/alexa-site/src/app/globals.css
+++ b/alexa-site/src/app/globals.css
@@ -241,10 +241,10 @@ a {
 }
 
 /* Melhorias para CLS */
-.aspect-square {
+/* .aspect-square {
   position: relative;
   padding-bottom: 100%;
-}
+} */
 
 .aspect-square > * {
   position: absolute;
